# llama.cpp

./: ATLAS_ISSUES_SUMMARY.md  ATLAS_PHASE3_COMPLETED.md  ATLAS_PHASE4_COMPLETED.md  ATLAS_PHASE5_COMPLETED.md  ATLAS_SERVER_ROADMAP.md  CHANGELOG_ATLAS.md  CLAUDE.md  ISSUE_11_COMPLETION.md  README_ATLAS_GGUF.md  README_ATLAS_RUNTIME.md  atlas_feature.md  issue10_template.md  issue11_template.md  issue12_template.md  issue13_template.md  issue14_template.md  issue2_template.md  issue4_template.md  issue5_template.md  issue6_template.md  issue7_template.md  issue8_template.md  issue9_template.md  issue_template.md
.claude/: CHIEF_DESIGNER.md
.claude/agents/: architect.agent.md  code-reviewer.agent.md  debugger.agent.md  developer.agent.md  feature-architect.md  project-manager.agent.md  tester.agent.md
docs/: ATLAS_GGUF_API.md  ATLAS_GGUF_FORMAT.md  ATLAS_GGUF_QUICK_START.md  ATLAS_INTEGRATION.md  ATLAS_PERSISTENCE.md  ATLAS_RUNTIME_API.md  ATLAS_RUNTIME_GUIDE.md
examples/: CMakeLists.txt  atlas-gguf-convert.cpp
examples/server/: ATLAS_API.md  CMakeLists.txt  README.md  README_ATLAS.md  atlas-endpoints.cpp  atlas-integration.cpp  atlas-integration.hpp  atlas-metrics.cpp  atlas-persistence-server.cpp  atlas-server.cpp  atlas-server.hpp  chat.mjs  completion.js.hpp  deps_daisyui.min.css.hpp  deps_markdown-it.js.hpp  deps_tailwindcss.js.hpp  deps_vue.esm-browser.js.hpp  index.html.hpp  loading.html.hpp  server.cpp  simple-server.cpp  utils.hpp
examples/server/public/: completion.js  index.html
ggml/: CMakeLists.txt
ggml/include/: ggml-atlas-memory.h  ggml.h
ggml/include/atlas/: atlas-types.h
ggml/src/: CMakeLists.txt  atlas-memory-cpu.c  atlas-memory.c  ggml.c
ggml/src/ggml-atlas/: CMakeLists.txt  atlas-backend.cpp  atlas-memory.cpp  atlas-types.cpp
ggml/src/ggml-cuda/: atlas-cuda.cu  atlas-cuda.cuh  atlas-memory-cuda.cu  atlas-multi-gpu.cu
include/: atlas-gguf.h  atlas-persistence.h  atlas-runtime.h
src/: CMakeLists.txt  atlas-gguf.cpp  atlas-persistence.cpp  llama-atlas-arch.cpp  llama-atlas-runtime.cpp  llama-atlas.cpp  llama-atlas.h
tests/: ATLAS_TESTING.md  CMakeLists.txt  README_ATLAS_TESTS.md  basic-test.cpp  debug-test.cpp  run-atlas-tests.sh  run_atlas_tests.sh  test-atlas-backend.cpp  test-atlas-configurations.cpp  test-atlas-cuda-performance.cpp  test-atlas-deep-memory.cpp  test-atlas-integration.cpp  test-atlas-memory.cpp  test-atlas-operations.cpp  test-atlas-persistence-integration.cpp  test-atlas-persistence-unit.cpp  test-atlas-types.cpp
tests/atlas/: CMakeLists.txt  run_tests.sh  test-atlas-benchmark.cpp  test-atlas-comprehensive.cpp  test-atlas-cuda-performance.cpp  test-atlas-integration.cpp  test-memory-module.cpp  test-omega-rule.cpp
tests/atlas/framework/: atlas-test-framework.cpp  atlas-test-framework.h
tools/server/: CMakeLists.txt  server.cpp
